# komport

./: CMakeLists.txt  COPYING  Messages.sh  readme.md
doc/: CMakeLists.txt  index.docbook
doc/html/: credits.html  index.html  introduction.html  komport-listcommand.html  new-komport.html  using-komport.html
komport/: CMakeLists.txt  gui.cpp  gui.h  main.cpp  mainwindow.cpp  mainwindow.h  statusbar.cpp  statusbar.h  trayicon.cpp  trayicon.h
komport/data/: komport.notifyrc  komport.qrc  komportappui.rc  org.kde.komport.appdata.xml  org.kde.komport.desktop  serialportui.rc  socketui.rc
komport/pref/: colorschemechooser.cpp  colorschemechooser.h  generalpref.cpp  generalpref.h  generalpref.ui  prefdialog.cpp  prefdialog.h
komport/resource/: CMakeLists.txt  resource.qrc
komport/resource/png/: update-png.sh
komport/resource/theme/: MyDark1.qss  datkstyle.qss
komport/ui/: ui_commandsettings.h  ui_generalpref.h  ui_guicommand.h  ui_newdevice.h
komport/view/: editor.cpp  editor.h  kserialport.cpp  kserialport.h  ksocket.cpp  ksocket.h  newdevice.cpp  newdevice.h  newdevice.ui
kpart/: CMakeLists.txt  config.cmake  komport.kcfg  ktversion.h  settings.kcfgc
kpart/device/: serialport.cpp  serialport.h  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  udp.cpp  udp.h
kpart/gui/: centralwidget.cpp  centralwidget.h  klistwidget.cpp  klistwidget.h
kpart/interfaces/: activity.cpp  activity.h  guiinterface.cpp  guiinterface.h  plugin.cpp  plugin.h  prefpageinterface.cpp  prefpageinterface.h  serialportinterface.cpp  serialportinterface.h  socketinterface.cpp  socketinterface.h
kpart/plugin/: pluginactivity.cpp  pluginactivity.h  pluginmanager.cpp  pluginmanager.h  pluginsetting.cpp  pluginsetting.h
kpart/util/: error.cpp  error.h  indexofcompare.h  ksvg.h  log.cpp  log.h  os.h  ptrmap.cpp  ptrmap.h  waitjob.cpp  waitjob.h
plugins/: CMakeLists.txt
plugins/listcommand/: CMakeLists.txt  commandplugin.cpp  commandplugin.h  commandplugin.kcfg  commandpluginsettings.kcfgc  commandsettings.cpp  commandsettings.h  commandsettings.ui  guicommand.cpp  guicommand.h  guicommand.ui  listcommand.desktop  scaletextlabel.h
plugins/logviewer/: CMakeLists.txt  editorui.rc  filetree.cpp  filetree.h  logviewer.cpp  logviewer.desktop  logviewer.h  logviewerplugin.cpp  logviewerplugin.h
po/: it.po
po/de/: komport.po
po/en_GB/: komport.po
po/fa/: komport.po
po/fr/: komport.po
